tests/sksl/errors/ArrayUnspecifiedDimensions.glsl
### Compilation failed:

error: 1: expected array dimension
error: 2: expected int literal
error: 3: expected int literal
error: 5: missing index in '[]'
4 errors
